🌸 Final cleanup for Arina Video Downloader v1.0.0
✨ Changes:
- Updated all project names from Universal to Arina Video Downloader
- Added heartfelt dedication: 感谢新有菜Arina的10年陪伴
- Removed all test files and development scripts
- Removed extra documentation files
- Kept only essential files for end users

📁 Final structure:
- Core files: perfect_apple_gui.py, universal_cli.py, universal_downloader.py
- Launchers: start_apple_gui.bat (GUI), start.bat (CLI), start.sh (Unix)
- Documentation: README.md, 使用说明.md
- Configuration: requirements.txt, pyproject.toml
- Security: Enhanced .gitignore, safe cookies/ directory

🎯 Ready for clean GitHub release!

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Development environment directories (NEVER push these)
+.cursor/**
+.kiro/**
+.specstory/**
+
+# Development environment directories (NEVER push these)
+.cursor/**
+.kiro/**
+.specstory/**
+
 # Python
 __pycache__/
 *.py[cod]
