Add comprehensive installation guide and one-click installer for beginners

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-# Universal Video Downloader - 依赖包列表
-# 这是pip的回退支持文件，推荐使用uv进行包管理
+# Arina AV Downloader - 依赖包列表
+# Thanks to Arina for 10 years of companionship 💕
 
-# 核心依赖
+# 核心下载引擎
 yt-dlp>=2024.11.04
 
-# GUI依赖 (可选)
-# 在Windows和Linux上使用PyQt6
-PyQt6>=6.0.0; platform_system!="Darwin"
+# GUI界面框架
+PySide6>=6.0.0
 
-# 在macOS上使用PySide6 (更好的兼容性)
-PySide6>=6.0.0; platform_system=="Darwin"
+# 网络请求库
+requests>=2.25.0
 
-# 开发依赖 (可选)
-# 取消注释以下行来安装开发工具
-# pytest>=7.0.0
-# black>=22.0.0
-# flake8>=6.0.0
-# mypy>=1.0.0
-# pytest-cov>=4.0.0
+# 彩色终端输出
+colorama>=0.4.0
+
+# 进度条显示
+tqdm>=4.60.0
+
+# JSON配置处理
+jsonschema>=4.0.0
