--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "universal-video-downloader"
-version = "1.0.0"
-description = "Universal multi-platform video downloader with portable deployment"
+name = "arina-av-downloader"
+version = "1.0.2"
+description = "Arina AV Downloader - Thanks to Arina for 10 years of companionship"
 readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
 authors = [
-    {name = "Universal Video Downloader Team"}
+    {name = "Arina AV Downloader Team"}
 ]
 keywords = ["video", "downloader", "youtube", "portable", "multi-platform"]
 classifiers = [
@@ -25,12 +25,15 @@ classifiers = [
 
 dependencies = [
     "yt-dlp>=2024.11.04",
+    "requests>=2.25.0",
+    "colorama>=0.4.0",
+    "tqdm>=4.60.0",
+    "jsonschema>=4.0.0",
 ]
 
 [project.optional-dependencies]
 gui = [
-    "PyQt6>=6.0.0; platform_system!='Darwin'",
-    "PySide6>=6.0.0; platform_system=='Darwin'"
+    "PySide6>=6.0.0",
 ]
 dev = [
     "pytest>=7.0.0",
@@ -44,13 +47,13 @@ test = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/universal-video-downloader/universal-video-downloader"
-Repository = "https://github.com/universal-video-downloader/universal-video-downloader"
-Issues = "https://github.com/universal-video-downloader/universal-video-downloader/issues"
+Homepage = "https://github.com/qhgy/Arina-AV-Downloader"
+Repository = "https://github.com/qhgy/Arina-AV-Downloader"
+Issues = "https://github.com/qhgy/Arina-AV-Downloader/issues"
 
 [project.scripts]
-uvd = "universal_downloader:main"
-uvd-gui = "gui_downloader:main"
+arina = "arina_cli:main"
+arina-gui = "arina_gui:main"
 
 [build-system]
 requires = ["setuptools>=45", "wheel"]
